--- a/ProductWebApp/Pages/_ViewImports.cshtml
+++ b/ProductWebApp/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @namespace ProductWebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using ProductWebApp.Models
+@using ProductWebApp.Dto
